--- a/assets/style.css
+++ b/assets/style.css
@@ -73,12 +73,14 @@ i{
 .presearch{
     background-color: antiquewhite;
     height: 40px;
+    display: flex;
+    align-items: center;
 }
 
 .searchContacts{
     width: calc(100% - 1em);
-    height: calc(100% );
-    margin: .5em;
+    height: calc(100% - .6em );
+    margin: .3em;
     display: flex;
     align-items: center;
     gap: 1em;
@@ -86,13 +88,17 @@ i{
 
 .searchContacts i{
     padding-inline: 1em;
-    width: 9%;
+    width: calc((100% - 1.6em) / 10);
+
+
 }
 
 .searchContacts input{
-    width: 90%;
+    width: calc((100% - 1.6em) / 10 * 9) ;
     border: none;
     height: 100%;
+    padding-inline: 1em;
+    border-radius: 5px;
 }
 
 .textArea{
